# django-ray

./: .ruff.toml  Dockerfile  Dockerfile.ray  Makefile  README.md  locustfile.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  k3d-integration.yml  release.yml
adr/: ARCHITECTURE.md  BASELINE.md  DISTRIBUTED_COMPUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md
adr/revisions/: REVIEW_2026-01-18.md  REVIEW_2026-01-18_v2.md  REVIEW_2026-01-19.md
k8s/: README.md
k8s/base/: django-ray-worker.yaml  django-setup-job.yaml  django-web.yaml  kustomization.yaml  ray-cluster.yaml  ray_data_dashboard.json  ray_default_dashboard.json
k8s/overlays/dev/: kustomization.yaml  worker-all-queues.yaml  worker-ml.yaml
k8s/overlays/local/: kustomization.yaml
scripts/: import_dashboards.py  test_ray_cluster.py
src/django_ray/: admin.py  apps.py  backends.py  core.py  logging.py  models.py
src/django_ray/management/commands/: django_ray_worker.py
src/django_ray/metrics/: __init__.py  prometheus.py
src/django_ray/migrations/: 0001_initial.py  0002_add_timeout_seconds.py
src/django_ray/results/: __init__.py  base.py  db.py  external.py
src/django_ray/runner/: cancellation.py  leasing.py  ray_core.py  ray_job.py  reconciliation.py  retry.py
src/django_ray/runtime/: distributed.py  entrypoint.py  import_utils.py  redaction.py
testproject/: api.py  settings.py  tasks.py
testproject/apps/: __init__.py
testproject/apps/cluster_tasks/: __init__.py  tasks.py
testproject/apps/local_ray/: __init__.py  tasks.py
testproject/apps/ml_pipeline/: __init__.py  tasks.py
testproject/apps/sync_tasks/: __init__.py  tasks.py
tests/: conftest.py  test_core.py
tests/integration/: test_api.py  test_task_execution.py  test_worker.py
tests/unit/: test_distributed.py  test_leasing.py  test_logging.py
