[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-ray"
version = "0.1.0"
description = "Ray.io integration with Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-ninja>=1.5.1",
    "ray[default]>=2.53.0",
    "whitenoise>=6.6",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "ty>=0.0.5",
    "pytest>=7.0",
    "pytest-django>=4.7",
    "pytest-cov>=4.0",
    "locust>=2.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["django_ray"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# Note: Django ORM-related errors are ignored via command-line flags in Makefile
# ty doesn't support Django stubs yet (Model.objects, field types, etc.)

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    # Suppress Ray's FutureWarning about accelerator env var override
    "ignore:Tip. In future versions of Ray:FutureWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_ray"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

